# quadriga-scaffolding

./: .gitignore  README.md  justfile  pyproject.toml  ruff.toml  scaffold.py  scaffold.txt  test_scaffold.py
.github/workflows/: checks.yml
data/quadriga/: assessment.py
data/quadriga/metadata/: run_all.py
src/quadriga_scaffolding/: __init__.py  __main__.py  cli.py  scaffold.py
src/quadriga_scaffolding/data/: scaffold.txt
src/quadriga_scaffolding/data/_static/: drag_drop.css  quadriga.css
src/quadriga_scaffolding/data/quadriga/metadata/: create_bibtex.py  create_jsonld.py  create_rdfxml.py  create_zenodo_json.py  extract_from_lernziele.py  update_citation_cff.py  utils.py
tests/: test_diff.py  test_scaffold.py
