[project]
name = "quadriga-scaffolding"
version = "0.1.0"
description = "Update a QUADRIGA OER to contain common files to the latest version."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Hannes Schnaitter", email = "git@schnaitter.info" },
]
dependencies = []

[project.optional-dependencies]
# Mirrors [dependency-groups].dev so plain pip can install dev tools via
# `pip install -e ".[dev]"`. Keep the two lists in sync.
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
scaffold = "quadriga_scaffolding.cli:main"

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quadriga_scaffolding"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["src/quadriga_scaffolding/data"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I", "N", "UP", "ANN", "PL", "RET", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src/quadriga_scaffolding", "tests"]
exclude = ["src/quadriga_scaffolding/data/"]

[[tool.mypy.overrides]]
# The packaged data/ tree contains template scripts that ship with the
# tool but are not part of its own code base; skip them entirely.
module = "quadriga_scaffolding.data.*"
ignore_errors = true
